--- a/templates/store/home.html
+++ b/templates/store/home.html
@@ -61,9 +61,7 @@
                     <div class="col-lg-3 col-md-6 mb-4">
                         <div class="card">
                             <div class="view overlay">
-                                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/12.jpg"
-                                     class="card-img-top"
-                                     alt="">
+                                <img src="{{ item.image.url }}" alt="" class="card-img-top">
                                 <a>
                                     <div class="mask rgba-white-slight"></div>
                                 </a>
