add Coupon discount functionality

--- a/templates/store/order_summary.html
+++ b/templates/store/order_summary.html
@@ -59,6 +59,12 @@
                             </td>
                         </tr>
                     {% endfor %}
+                    {% if object.coupon %}
+                        <tr>
+                            <td colspan="4"><b>Coupon discount</b></td>
+                            <td><b>-{{ object.coupon.amount }} €</b></td>
+                        </tr>
+                    {% endif %}
                     {% if object.get_total_cost_order %}
                         <tr>
                             <td colspan="4"><b>Order Total</b></td>
